translation cards.html

--- a/最新.html
+++ b/最新.html
@@ -62,8 +62,36 @@
             legal: {
                 hero: { en: "Bona Fide", zh: "善意；诚实地", detail: "拉丁语词汇。指在法律行为中主观上没有欺诈的意图。", context: "Legal Principle" },
                 cards: [
-                    { id: 'l1', en: "Consideration", zh: "对价", detail: "合同中换取承诺的对等利益。", context: "Contract" },
-                    { id: 'l2', en: "Force Majeure", zh: "不可抗力", detail: "不可预见且不可克服的客观力量。", context: "Compliance" }
+                    { id: 'l1', en: "Without Prejudice", zh: "不损害；无偏见", detail: "在法律函件中常见，指该声明不构成对自身权利的放弃或对事实的承认。", context: "Litigation" },
+                    { id: 'l2', en: "Indemnification", zh: "补偿；赔偿", detail: "一方承诺赔偿另一方因特定风险或违约而遭受的损失。", context: "Contract" },
+                    { id: 'l3', en: "Force Majeure", zh: "不可抗力", detail: "不能预见、不能避免且不能克服的客观情况，如地震、战争。", context: "General" },
+                    { id: 'l4', en: "Due Diligence", zh: "尽职调查", detail: "在签署合同或投资前，对目标公司或资产进行的全面审查。", context: "Corporate" },
+                    { id: 'l5', en: "Joint and Several Liability", zh: "连带责任", detail: "两个或多个主体共同承担债务，债权人可要求其中任何一人承担全部债务。", context: "Tort/Contract" },
+                    { id: 'l6', en: "Breach of Contract", zh: "违约", detail: "未能按照合同约定履行义务的行为。", context: "Contract" },
+                    { id: 'l7', en: "Arbitration", zh: "仲裁", detail: "双方同意将争议提交给非法院的第三方进行裁决的纠纷解决方式。", context: "Dispute Resolution" },
+                    { id: 'l8', en: "Intellectual Property", zh: "知识产权", detail: "关于作品、发明、商标等智力成果的专有权利。", context: "IP Law" },
+                    { id: 'l9', en: "Statute of Limitations", zh: "诉讼时效", detail: "法律规定的权利人行使请求权的法定期间。", context: "Litigation" },
+                    { id: 'l10', en: "Articles of Association", zh: "公司章程", detail: "规定公司组织原则及业务运作的基本准则。", context: "Corporate" },
+                    { id: 'l11', en: "Power of Attorney", zh: "授权委托书", detail: "书面授权他人代表自己行使法律权力的文件。", context: "Legal Agency" },
+                    { id: 'l12', en: "Liquidated Damages", zh: "约定违约金", detail: "合同双方预先约定的，在违约发生时需支付的具体金额。", context: "Contract" },
+                    { id: 'l13', en: "Good Faith", zh: "诚实信用", detail: "民法基本原则，要求当事人在行使权利时诚实、守信。", context: "Civil Law" },
+                    { id: 'l14', en: "Burden of Proof", zh: "举证责任", detail: "当事人对自己提出的主张有提供证据加以证明的责任。", context: "Evidence" },
+                    { id: 'l15', en: "Conflict of Interest", zh: "利益冲突", detail: "个人利益与职守、公职或其他职责之间的竞争状态。", context: "Ethics" },
+                    { id: 'l16', en: "Confidentiality Agreement", zh: "保密协议", detail: "俗称NDA，约定双方不向第三方泄露特定信息的协议。", context: "Contract" },
+                    { id: 'l17', en: "Exclusive Jurisdiction", zh: "专属管辖", detail: "法律规定某些案件只能由特定的法院受理。", context: "Litigation" },
+                    { id: 'l18', en: "Termination for Convenience", zh: "主动终止；任意解除", detail: "合同一方无需理由即可终止合同的权利，通常需提前通知。", context: "Contract" },
+                    { id: 'l19', en: "Duty of Care", zh: "注意义务", detail: "在特定情况下，法律要求个人应达到的合理谨慎程度。", context: "Tort Law" },
+                    { id: 'l20', en: "Legal Entity", zh: "法人实体", detail: "依法成立，能够独立承担民事责任的组织。", context: "Corporate" },
+                    { id: 'l21', en: "Governing Law", zh: "管辖法律", detail: "合同条款中约定解决争议所适用的国家或地区法律。", context: "General" },
+                    { id: 'l22', en: "Service of Process", zh: "文书送达", detail: "将法律文书（如传票）正式交付给被告的法定程序。", context: "Procedure" },
+                    { id: 'l23', en: "Injunction", zh: "禁令", detail: "法院发布的强制当事人做某事或禁止做某事的命令。", context: "Litigation" },
+                    { id: 'l24', en: "Assignment", zh: "转让", detail: "将合同权利移交给第三方的行为。", context: "Contract" },
+                    { id: 'l25', en: "Pro Bono", zh: "法律援助；公益服务", detail: "为公众利益而免费提供的专业法律服务。", context: "Legal Practice" },
+                    { id: 'l26', en: "Reasonable Doubt", zh: "合理怀疑", detail: "刑事诉讼中定罪必须排除的标准。", context: "Criminal Law" },
+                    { id: 'l27', en: "Non-Compete Clause", zh: "竞业限制条款", detail: "约定员工在离职后一定期限内不得从事竞争性业务。", context: "Employment" },
+                    { id: 'l28', en: "Public Domain", zh: "公有领域", detail: "指不再受知识产权保护，公众可以自由使用的作品。", context: "IP Law" },
+                    { id: 'l29', en: "Precedent", zh: "判例", detail: "先前法院的裁决，对后续类似案件具有指导或约束力。", context: "Common Law" },
+                    { id: 'l30', en: "Waiver", zh: "弃权", detail: "自愿放弃已知权利、索赔或特权的法律行为。", context: "Contract" }
                 ],
                 theme: "bg-legal", accent: "#1e293b"
             },
@@ -157,4 +185,5 @@
         switchTheme('legal');
     </script>
 </body>
+
 </html>
