--- a/index.html
+++ b/index.html
@@ -122,4 +122,178 @@
                 { id: 'g6', en: "Hitbox", zh: "碰撞框", detail: "检测碰撞的隐形几何体。", context: "Combat" },
                 { id: 'g7', en: "Proc", zh: "触发", detail: "特定概率效果被激活。", context: "Mechanics" },
                 { id: 'g8', en: "Loot Box", zh: "开箱", detail: "包含随机奖励的容器。", context: "Business" },
-                { id: 'g9', en: "Fast Travel", zh: "快速旅行", detail: "在发现地点间瞬间移动。", context: "Expl
+                { id: 'g9', en: "Fast Travel", zh: "快速旅行", detail: "在发现地点间瞬间移动。", context: "Exploration" },
+                { id: 'g10', en: "Permadeath", zh: "永久死亡", detail: "一旦死亡进度即失效。", context: "Roguelike" },
+                { id: 'g11', en: "Quality of Life", zh: "体验优化", detail: "让操作更便捷的小改动。", context: "Dev" },
+                { id: 'g12', en: "NPC", zh: "非玩家角色", detail: "由电脑控制的角色。", context: "General" },
+                { id: 'g13', en: "Meta", zh: "主流策略", detail: "当前版本公认的最优玩法。", context: "Meta" },
+                { id: 'g14', en: "New Game Plus", zh: "二周目", detail: "通关后带装备重新开始。", context: "Prog" },
+                { id: 'g15', en: "Microtransaction", zh: "内购", detail: "游戏内小额消费行为。", context: "Business" },
+                { id: 'g16', en: "Sandbox", zh: "沙盒", detail: "高自由度的创造玩法。", context: "Genre" },
+                { id: 'g17', en: "Vertical Slice", zh: "垂直切片", detail: "展示成品质感的完整原型。", context: "Industry" },
+                { id: 'g18', en: "Spawn", zh: "生成", detail: "在地图上出现的过程。", context: "Mechanics" },
+                { id: 'g19', en: "Gacha", zh: "抽卡", detail: "随机获取稀有奖励的玩法。", context: "Business" },
+                { id: 'g20', en: "Haptic Feedback", zh: "触觉反馈", detail: "细腻的震动效果。", context: "Hardware" },
+                { id: 'g21', en: "Skill Tree", zh: "技能树", detail: "展示角色成长路径的图。", context: "Prog" },
+                { id: 'g22', en: "Ray Tracing", zh: "光线追踪", detail: "模拟光线行为的技术。", context: "Graphics" },
+                { id: 'g23', en: "Grinding", zh: "刷怪", detail: "机械性重复战斗。", context: "General" },
+                { id: 'g24', en: "Early Access", zh: "抢先体验", detail: "未完工即开放购买测试。", context: "Industry" },
+                { id: 'g25', en: "Speedrun", zh: "速通", detail: "最快速度完成游戏。", context: "Comp" },
+                { id: 'g26', en: "Dynamic Weather", zh: "动态天气", detail: "随时间变化的系统。", context: "Env" },
+                { id: 'g27', en: "Mana / MP", zh: "法力值", detail: "施法消耗的能量。", context: "Attrib" },
+                { id: 'g28', en: "Side Quest", zh: "支线任务", detail: "非主线剧情的额外任务。", context: "Prog" },
+                { id: 'g29', en: "DLC", zh: "扩展包", detail: "额外发布的数字内容。", context: "Business" },
+                { id: 'g30', en: "Mod", zh: "模组", detail: "玩家开发的修改插件。", context: "Community" }
+            ],
+            food: [
+                { id: 'f1', en: "Maillard Reaction", zh: "美拉德反应", detail: "高温下产生的褐变反应。", context: "Science" },
+                { id: 'f2', en: "Stir-fry", zh: "煸炒", detail: "中餐最基础的翻炒技法。", context: "Technique" },
+                { id: 'f3', en: "Al Dente", zh: "弹牙", detail: "意面煮得恰到好处。", context: "Texture" },
+                { id: 'f4', en: "Aroma Wheel", zh: "风味轮", detail: "描述风味的气味图谱。", context: "Tasting" },
+                { id: 'f5', en: "Red-braised", zh: "红烧", detail: "利用酱油冰糖上色的技法。", context: "Technique" },
+                { id: 'f6', en: "Farm-to-table", zh: "农场到餐桌", detail: "食材来源新鲜的理念。", context: "Concept" },
+                { id: 'f7', en: "Acidity", zh: "酸度", detail: "明亮酸感，区别于变质。", context: "Tasting" },
+                { id: 'f8', en: "Simmer", zh: "文火慢炖", detail: "保持液体接近沸点加热。", context: "Technique" },
+                { id: 'f9', en: "Palate Cleanser", zh: "清口菜", detail: "清除前一道菜的余味。", context: "Dining" },
+                { id: 'f10', en: "Wok Hei", zh: "镬气", detail: "高温产生的复杂焦香。", context: "Technique" },
+                { id: 'f11', en: "Mouthfeel", zh: "口感", detail: "腔内产生的物理感受。", context: "Tasting" },
+                { id: 'f12', en: "Deep-fry", zh: "油炸", detail: "浸入油脂获得酥脆外皮。", context: "Technique" },
+                { id: 'f13', en: "Umami", zh: "鲜味", detail: "第五种基本味道。", context: "Tasting" },
+                { id: 'f14', en: "Sous-vide", zh: "低温慢煮", detail: "真空恒温水浴加热。", context: "Molecular" },
+                { id: 'f15', en: "Blanch", zh: "焯水", detail: "短暂放入沸水中烫洗。", context: "Technique" },
+                { id: 'f16', en: "Sommelier", zh: "侍酒师", detail: "负责酒水选配的专家。", context: "Profession" },
+                { id: 'f17', en: "Infusion", zh: "浸渍", detail: "提取风味的过程。", context: "Technique" },
+                { id: 'f18', en: "Zest", zh: "皮屑", detail: "柑橘最外层的芳香皮。", context: "Ingredient" },
+                { id: 'f19', en: "Dim Sum", zh: "点心", detail: "粤式精致小吃。", context: "Cuisine" },
+                { id: 'f20', en: "Decant", zh: "醒酒", detail: "与空气接触释放香气。", context: "Tasting" },
+                { id: 'f21', en: "Crispy", zh: "酥脆", detail: "易碎的薄脆质感。", context: "Texture" },
+                { id: 'f22', en: "Garnish", zh: "盘饰", detail: "用于点缀风味的食材。", context: "Pres" },
+                { id: 'f23', en: "Steaming", zh: "蒸", detail: "保留原味营养的烹饪。", context: "Technique" },
+                { id: 'f24', en: "Tannin", zh: "单宁", detail: "涩感来源，来自皮籽。", context: "Tasting" },
+                { id: 'f25', en: "Fermentation", zh: "发酵", detail: "微生物转化成分的过程。", context: "Science" },
+                { id: 'f26', en: "Velveting", zh: "上浆", detail: "肉类包裹淀粉保持鲜嫩。", context: "Technique" },
+                { id: 'f27', en: "Body", zh: "醇厚度", detail: "饮料在口中的重量感。", context: "Tasting" },
+                { id: 'f28', en: "Glaze", zh: "挂汁", detail: "表面涂抹发亮液体。", context: "Pres" },
+                { id: 'f29', en: "Offal", zh: "内脏", detail: "动物的可食用器官。", context: "Ingredient" },
+                { id: 'f30', en: "Aftertaste", zh: "余韵", detail: "吞咽后持续的风味。", context: "Tasting" }
+            ]
+        };
+
+        let currentCategory = 'all';
+        let isDark = false;
+        const intervals = [0, 1, 12, 24, 48, 168, 360, 720];
+
+        function getMem() { return JSON.parse(localStorage.getItem('lexi_v2') || '{}'); }
+        function saveMem(id, known) {
+            let m = getMem();
+            let r = m[id] || { level: 0, time: 0 };
+            known ? r.level = Math.min(r.level + 1, 7) : r.level = Math.max(r.level - 1, 0);
+            r.time = Date.now() + intervals[r.level] * 3600000;
+            m[id] = r;
+            localStorage.setItem('lexi_v2', JSON.stringify(m));
+            renderAll();
+        }
+
+        function switchView(view) {
+            document.getElementById('view-learn').classList.toggle('view-hidden', view !== 'learn');
+            document.getElementById('view-search').classList.toggle('view-hidden', view !== 'search');
+            document.getElementById('dock-learn').classList.toggle('dock-item-active', view === 'learn');
+            document.getElementById('dock-search').classList.toggle('dock-item-active', view === 'search');
+            if(view === 'learn') renderLearn(); else renderSearch();
+        }
+
+        function renderSearch() {
+            const query = document.getElementById('global-search').value.toLowerCase();
+            let allItems = [];
+            if(currentCategory === 'all') {
+                Object.values(vocabulary).forEach(cat => allItems.push(...cat));
+            } else {
+                allItems = vocabulary[currentCategory] || [];
+            }
+
+            // A-Z 自动排序
+            allItems.sort((a, b) => a.en.localeCompare(b.en));
+
+            const filtered = allItems.filter(i => i.en.toLowerCase().includes(query) || i.zh.includes(query));
+            const mem = getMem();
+
+            document.getElementById('search-results').innerHTML = filtered.map(item => `
+                <div class="glass-card p-6 rounded-3xl flex justify-between items-center group transition-all hover:scale-[1.02]">
+                    <div>
+                        <h3 class="font-bold text-lg">${item.en}</h3>
+                        <p class="text-gray-400 text-sm">${item.zh}</p>
+                    </div>
+                    <div class="flex flex-col items-end">
+                        <span class="text-[8px] text-blue-500 font-mono mb-1 uppercase tracking-tighter">${mem[item.id] ? 'Level '+mem[item.id].level : ''}</span>
+                        <div class="text-[8px] space-x-1 opacity-20 group-hover:opacity-100 transition-opacity">
+                            ${Array.from({length:7}).map((_,i) => `<span class="memory-dot ${i < (mem[item.id]?.level || 0) ? 'bg-blue-500' : 'bg-gray-300'}"></span>`).join('')}
+                        </div>
+                    </div>
+                </div>
+            `).join('');
+
+            if(!query && allItems.length > 0) {
+                const dayIndex = Math.floor(Date.now()/86400000);
+                const feat = allItems[dayIndex % allItems.length];
+                document.getElementById('feat-en').innerText = feat.en;
+                document.getElementById('feat-zh').innerText = feat.zh;
+                document.getElementById('feat-detail').innerText = feat.detail;
+            }
+        }
+
+        function renderLearn() {
+            const mem = getMem();
+            const now = Date.now();
+            const allItems = Object.values(vocabulary).flat();
+            const toReview = allItems.filter(i => mem[i.id] && mem[i.id].time < now);
+            
+            document.getElementById('dash-learned').innerText = Object.keys(mem).length;
+            document.getElementById('dash-review').innerText = toReview.length;
+
+            const container = document.getElementById('learn-card-container');
+            if(toReview.length === 0) {
+                document.getElementById('learn-empty').classList.remove('view-hidden');
+                container.innerHTML = '';
+            } else {
+                document.getElementById('learn-empty').classList.add('view-hidden');
+                const nextItem = toReview[0];
+                container.innerHTML = `
+                    <div class="glass-card p-12 rounded-[3.5rem] shadow-2xl text-center border-b-8 border-blue-500/20">
+                        <h2 class="text-5xl font-bold mb-6 serif-title tracking-tighter">${nextItem.en}</h2>
+                        <div class="h-20 flex items-center justify-center mb-8">
+                            <p class="text-gray-300 dark:text-gray-600 text-sm hover:text-blue-500 cursor-pointer transition-all" onclick="this.innerHTML='<span class=\'text-2xl font-bold text-slate-800 dark:text-white\'>${nextItem.zh}</span><br><span class=\'text-xs mt-2 block\'>${nextItem.detail}</span>'">点击揭晓答案</p>
+                        </div>
+                        <div class="flex space-x-4">
+                            <button onclick="saveMem('${nextItem.id}', true)" class="flex-1 py-5 rounded-3xl bg-blue-600 text-white font-bold shadow-lg active:scale-95 transition-all">认识</button>
+                            <button onclick="saveMem('${nextItem.id}', false)" class="flex-1 py-5 rounded-3xl bg-slate-100 text-slate-400 dark:bg-slate-800 font-bold active:scale-95 transition-all">模糊</button>
+                        </div>
+                    </div>
+                `;
+            }
+        }
+
+        function setCategory(cat) {
+            currentCategory = cat;
+            renderSearch();
+            // 按钮高亮处理
+            ['all', 'legal', 'gaming', 'food'].forEach(c => {
+                document.getElementById('cat-'+c).classList.toggle('bg-blue-500', c === cat);
+                document.getElementById('cat-'+c).classList.toggle('text-white', c === cat);
+            });
+        }
+
+        function toggleDarkMode() {
+            isDark = !isDark;
+            document.body.classList.toggle('dark-mode');
+            document.getElementById('dark-icon').innerText = isDark ? '☀️' : '🌙';
+        }
+
+        function renderAll() {
+            renderSearch();
+            renderLearn();
+        }
+
+        window.onload = () => { renderAll(); switchView('search'); setCategory('all'); };
+    </script>
+</body>
+</html>
